[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "cartesian-tree"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "cartesian_tree[lint]",
    "cartesian_tree[test]",
    "cartesian_tree[build]",
]
lint = ["ruff==0.12.4"]
test = ["pytest==8.4.1"]
build = ["maturin==1.8.6"]


[tool.maturin]
bindings = "pyo3"
python-source = "python"
features = ["bindings"]
exclude = ["tests"]


[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
ignore = []
unfixable = []

[tool.ruff.lint.isort]
known-local-folder = ["cartesian_tree"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "D100"]